--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,7 @@ textarea {
 .board_form {
     width: 80%;
     display: inline-block;
-    border-top: 2px solid #ddd;
+    margin-bottom: 30px;
 }
 
 .review_block {
@@ -197,4 +197,10 @@ textarea {
     text-align: left;
     padding: 0 5%;
     font-size: 14px;
+}
+
+.page_on {
+    color: #ff4a4a !important;
+    font-size: 17px;
+    font-family: 's-core_LB'
 }
